# wcnt

./: .gitignore  BUILD  MODULE.bazel  README  go.mod  main.go
.github/workflows/: assign-blog-post-owner-on-release.yml
cmd/: BUILD  count.go  count_test.go  root.go
config/: team.yml
