"""
Bazel workspace for wcnt (word count) project.
"""

module(name = "wcnt", version = "0.1.0")

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.40.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "github.com/spf13/cobra",
    version = "v1.8.0",
    sum = "h1:7aJaZx1B85qltLMc546zn58BxxfZdR/W22ej9CFoEf0=",
)

use_repo(
    go_deps,
    "com_github_spf13_cobra",
)
